# user-config

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.org  calendar.nix  emacs.nix  eww.nix  fcitx.nix  flake.nix  home.nix  shell.nix  ssh-keys.hidden.nix  xmonad.nix  xsession.nix
base/: gitconfig  gitignore  ssh_config.private  ssh_config_linux.private  ssh_config_macos.private
conf/: gitconfig  gitconfig.private  gitignore  offlineimap.py  ssh_config.private  ssh_config_linux.private  vimrc
conf/alacritty/: alacritty.toml
conf/copyq/: copyq-commands.ini
conf/dunst/: dunstrc
conf/eww/: README.md  combinator.yuck  eww.yuck
conf/fcitx5/: .gitignore  profile
conf/hime/: hime.conf
conf/hypr/: hyprland.conf
conf/i3/: config
conf/kanshi/: config
conf/khal/: config
conf/xmonad/: package.yaml  shou-xmonad.cabal  xmonad.hs.rej
conf/xmonad/lib/XMonad/Actions/: AbsWS.hs  FixedWorkspace.hs
conf/xmonad/lib/XMonad/Hooks/: EwwLog.hs  SmartFloat.hs
conf/xmonad/lib/XMonad/Layout/: TallMastersComboModified.hs
conf/xmonad/scripts/: new-keyboard.sh  toggle-mute.sh
data/: default.nix  ssh-keys.hidden.nix
gnupg/: gpg-agent.conf
home/: calendar.nix  default.nix  emacs.nix  eww.nix  fcitx.nix  home.nix  input.nix  nixos.nix  non-nixos.nix  shell.nix  ssh.nix  xmonad.nix  xsession.nix
mail/: offlineimaprc
nixos/: bluetooth.nix  common.nix  configuration.nix  flake.nix  hardware-configuration.nix  mrnix.nix  nfs-mount.nix  nix.nix
tmux/: tmux.conf
utils/: backup  link
x11/: xsession  xsession-nix
xdg/: stalonetrayrc  starship.toml
(+202 files in other folders)
