cabal-version:   3.0
name:            shou-xmonad
version:         0.0.0
build-type:      Simple

common warnings
  ghc-options: -Wall

executable xmonad
  import: warnings
  main-is: xmonad.hs
  other-modules:
      XMonad.Actions.AbsWS
      XMonad.Actions.Backlight
      XMonad.Actions.FixedWorkspace
      XMonad.Actions.Volume
      XMonad.Hooks.EwwLog
      XMonad.Hooks.SmartFloat
      XMonad.Hooks.TiledProperty
      XMonad.Layout.TallMastersComboModified
  hs-source-dirs:
      lib/
      ./
  build-depends:
      aeson
    , base
    , bytestring
    , containers
    , text
    , xmonad
    , xmonad-contrib
    , xmonad-extras
  default-language: Haskell2010

